# axon

./: .gitignore  PLAN.md  README.md
agent-tui/: Cargo.toml  README.md
agent-tui/src/: config.rs  main.rs
agent-tui/src/agent/: mod.rs  repro_test.rs  runtime.rs
agent-tui/src/agent/agents/: coder.rs  explorer.rs  integrator.rs  mod.rs  planner.rs  reviewer.rs  tester.rs
agent-tui/src/llm/: mod.rs
agent-tui/src/orchestrator/: dag_scheduler.rs  event_bus.rs  events.rs  mod.rs  pool.rs
agent-tui/src/persistence/: mod.rs
agent-tui/src/shared/: mod.rs
agent-tui/src/tui/: command_handler.rs  markdown.rs  mod.rs  popups.rs  session_manager.rs  theme.rs
agent-tui/src/tui/components/: chat.rs  input.rs  sidebar.rs
agent-tui/src/types/: mod.rs
docs/: ARCHITECTURE.md  PRD.md  THREAT_MODEL.md
docs/DECISIONS/: ADR-0001-runtime-event-model.md  ADR-0002-dag-scheduler.md  ADR-0003-tool-policy-gate.md
